syntax = "proto3";
import "google/protobuf/wrappers.proto";
option csharp_namespace = "ResourceService.Grpc.ProtoBuf";

message Post{
 string Id = 1;
 string SenderId =2;
 string Content = 3;
 string RoomId = 4;
 string CreatedAt =5; 
}

message PostsRequest {
  string roomId = 1; 
  google.protobuf.Int32Value pageSize = 2;
  google.protobuf.Int32Value pageNumber = 3;
}

message PostsReply {    
  repeated Post posts=1;
}

service PostsService {
  rpc GetPosts (PostsRequest) returns (PostsReply);
}
